test(auth): Add integration tests for user authentication
* Include FactoryBot::Syntax::Methods for cleaner syntax
* Setup fixtures for user creation and JWT authorization
* Test cases:
    * Sign out user
    * Delete user and fail to sign in with the same JWT
    * Sign in with correct and incorrect credentials

--- a/back_end/Gemfile
+++ b/back_end/Gemfile
@@ -38,6 +38,12 @@ group :development, :test do
 
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
   gem "rubocop-rails-omakase", require: false
+
+  # Support for multiple build strategies for fixtures (saved instances, unsaved instances and attribute hashes)
+  gem "factory_bot_rails"
+
+  # Generate synthetic data
+  gem "faker"
 end
 
 gem "devise"
