test(task): Add timecop gem and freeze time for task creation
* Require timecop gem in test_helper
* Freeze time in setup using Timecop.freeze(Date.today)
* Create task and assert attributes using frozen time

--- a/back_end/Gemfile
+++ b/back_end/Gemfile
@@ -46,5 +46,10 @@ group :development, :test do
   gem "faker"
 end
 
+group :test do
+  # Use Timecop to test time-dependent code and freeze time
+  gem "timecop"
+end
+
 gem "devise"
 gem "devise-jwt"
