config(gem): Add cancancan gem for authorization
* Add `gem 'cancancan'` to Gemfile
* Run `bundle install`

--- a/back_end/Gemfile
+++ b/back_end/Gemfile
@@ -53,3 +53,6 @@ end
 
 gem "devise"
 gem "devise-jwt"
+
+# Authorization library which restricts what resources a given user is allowed to access.
+gem "cancancan"
