setup(test): Add rspec-rails gem and configure RSpec
* Add `rspec-rails` gem to Gemfile
* Run `bundle install`
* Generate RSpec configuration with `rails g rspec:install`
* Configure FactoryBot integration with RSpec in spec/support/factory_bot.rb
* Modify spec/rails_helper.rb to include 'support/factory_bot'
* Add .rake_tasks and .rspec to .gitignore

--- a/back_end/Gemfile
+++ b/back_end/Gemfile
@@ -44,6 +44,9 @@ group :development, :test do
 
   # Generate synthetic data
   gem "faker"
+
+  # RSpec testing framework as an alternative to the default testing framework, Minitest.
+  gem "rspec-rails"
 end
 
 group :test do
