--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
-{
-  "files.exclude": {
-    "back_end": true,
-    "front_end": true
-  }
-}
+// {
+//   "files.exclude": {
+//     "back_end": true,
+//     "front_end": true
+//   }
+// }
